@@ -1,3 +1,3 @@
 pysmi
-pycryptodome
+pycryptodomex
 pyasn1>=0.2.3
