@@ -58,7 +58,7 @@ try:
     from setuptools import setup
 
     params = {
-        'install_requires': ['pyasn1>=0.2.3', 'pysmi', 'pycryptodome'],
+        'install_requires': ['pyasn1>=0.2.3', 'pysmi', 'pycryptodomex'],
         'zip_safe': True
     }
 
@@ -72,7 +72,7 @@ except ImportError:
 
     params = {}
     if sys.version_info[:2] > (2, 4):
-        params['requires'] = ['pyasn1(>=0.2.3)', 'pysmi', 'pycryptodome']
+        params['requires'] = ['pyasn1(>=0.2.3)', 'pysmi', 'pycryptodomex']
 
 doclines = [x.strip() for x in (__doc__ or '').split('\n') if x]
 
