@@ -3,6 +3,9 @@ Revision 4.4.1, released 2017-10-XX
 ------------------------------------
 
 - HMAC-SHA-2 Authentication Protocols support added (RFC-7860)
+- The pycryptodome dependency replaced with pycryptodomex as
+  it is recommended by the upstream to avoid unwanted interference
+  with PyCrypto package should it also be installed.
 
 Revision 4.3.10, released 2017-10-XX
 ------------------------------------
